hphp/hack/test/typecheck/array_map4.php
<?hh

function test(Container<int> $x): void {
  array_map($x, $x);
}
